--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
         app:itemBackground="@color/primary"
         app:itemIconTint="@color/tab_text_color"
         app:itemTextColor="@color/tab_text_color"
-        app:menu="@menu/bottom_navigation_view"/>
+        app:menu="@menu/bottom_navigation_view"
+        android:layout_marginTop="100dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
