--- a/app/src/main/res/layout/fragment_series.xml
+++ b/app/src/main/res/layout/fragment_series.xml
@@ -1,114 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_dark"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/primary_dark">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/primary_dark"
-        android:paddingTop="@dimen/margin_small"
         android:paddingLeft="@dimen/margin_medium"
-        android:paddingRight="@dimen/margin_medium">
-
-
+        android:paddingRight="@dimen/margin_medium"
+        android:paddingTop="@dimen/margin_small">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_series"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_medium"
-            />
-
-        <!--<TextView-->
-            <!--android:id="@+id/tv_evening_meditation"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Evening Meditation"-->
-            <!--android:layout_below="@id/cv_series"-->
-            <!--android:layout_marginTop="@dimen/margin_large"-->
-            <!--android:textColor="@color/white_full"-->
-            <!--android:textSize="@dimen/text_regular_3x"/>-->
-
-        <!--<android.support.v7.widget.RecyclerView-->
-            <!--android:id="@+id/rv_evening_meditation"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@id/tv_evening_meditation"-->
-            <!--android:layout_marginTop="@dimen/margin_medium"/>-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/tv_pretty_minds"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Pretty Minds"-->
-            <!--android:layout_below="@id/rv_evening_meditation"-->
-            <!--android:layout_marginTop="@dimen/margin_large"-->
-            <!--android:textColor="@color/white_full"-->
-            <!--android:textSize="@dimen/text_regular_3x"/>-->
-
-        <!--<android.support.v7.widget.RecyclerView-->
-            <!--android:id="@+id/rv_pretty_minds"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@id/tv_pretty_minds"-->
-            <!--android:layout_marginTop="@dimen/margin_medium"/>-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/tv_news_on_simple_habits"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="News On Simple Habits"-->
-            <!--android:layout_below="@id/rv_pretty_minds"-->
-            <!--android:layout_marginTop="@dimen/margin_large"-->
-            <!--android:textColor="@color/white_full"-->
-            <!--android:textSize="@dimen/text_regular_3x"/>-->
-
-        <!--<android.support.v7.widget.RecyclerView-->
-            <!--android:id="@+id/rv_news_on_simple_habits"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@id/tv_news_on_simple_habits"-->
-            <!--android:layout_marginTop="@dimen/margin_medium"/>-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/tv_most_popular"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Most Popular"-->
-            <!--android:layout_below="@id/rv_news_on_simple_habits"-->
-            <!--android:layout_marginTop="@dimen/margin_large"-->
-            <!--android:textColor="@color/white_full"-->
-            <!--android:textSize="@dimen/text_regular_3x"/>-->
-
-        <!--<android.support.v7.widget.RecyclerView-->
-            <!--android:id="@+id/rv_most_popular"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@id/tv_most_popular"-->
-            <!--android:layout_marginTop="@dimen/margin_medium"/>-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/tv_all_topics"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="All Topics"-->
-            <!--android:layout_below="@id/rv_most_popular"-->
-            <!--android:layout_marginTop="@dimen/margin_large"-->
-            <!--android:textColor="@color/white_full"-->
-            <!--android:textSize="@dimen/text_regular_3x"/>-->
-
-        <!--<android.support.v7.widget.RecyclerView-->
-            <!--android:id="@+id/rv_all_topics"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@id/tv_all_topics"-->
-            <!--android:layout_marginTop="@dimen/margin_medium"/>-->
+            android:layout_marginTop="@dimen/margin_medium" />
 
     </RelativeLayout>
 
-</ScrollView>
+</RelativeLayout>
